--- a/PetitionsClient/Views/_ViewImports.cshtml
+++ b/PetitionsClient/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-@using PetitionsClient
+@using WebApplication3
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Microsoft.AspNetCore.SpaServices
