--- a/PetitionsClient/ClientApp/app/components/counter/counter.component.html
+++ b/PetitionsClient/ClientApp/app/components/counter/counter.component.html
@@ -4,4 +4,4 @@
 
 <p>Current count: <strong>{{ currentCount }}</strong></p>
 
-<button (click)="incrementCounter()">Increment</button>
+<button type="button" class="btn btn-primary" (click)="incrementCounter()">Increment</button>
