--- a/PetitionsClient/ClientApp/app/components/app/app.component.html
+++ b/PetitionsClient/ClientApp/app/components/app/app.component.html
@@ -1,5 +1,5 @@
-<div class='container'>
-    <div class='row'>
+<div class='container-fluid'>
+    <div>
         <app-menu></app-menu>
     </div>
     <div class="row">
