removed webpack --env.prod from .cproj and app published to azure

--- a/PetitionsClient/ClientApp/app/components/app/app.component.html
+++ b/PetitionsClient/ClientApp/app/components/app/app.component.html
@@ -2,7 +2,7 @@
     <div>
         <app-menu></app-menu>
     </div>
-    <div class="row">
+    <div>
         <router-outlet></router-outlet>
     </div>
 </div>
