--- a/PetitionsClient/ClientApp/app/components/home/home.component.html
+++ b/PetitionsClient/ClientApp/app/components/home/home.component.html
@@ -1,26 +1,66 @@
-<!--<h1>Hello, world!</h1>
-<p>Welcome to your new single-page application, built with:</p>
-<ul>
-    <li><a href='https://get.asp.net/'>ASP.NET Core</a> and <a href='https://msdn.microsoft.com/en-us/library/67ef8sbd.aspx'>C#</a> for cross-platform server-side code</li>
-    <li><a href='https://angular.io/'>Angular</a> and <a href='http://www.typescriptlang.org/'>TypeScript</a> for client-side code</li>
-    <li><a href='https://webpack.github.io/'>Webpack</a> for building and bundling client-side resources</li>
-    <li><a href='http://getbootstrap.com/'>Bootstrap</a> for layout and styling</li>
-</ul>
-<p>To help you get started, we've also set up:</p>
-<ul>
-    <li><strong>Client-side navigation</strong>. For example, click <em>Counter</em> then <em>Back</em> to return here.</li>
-    <li><strong>Server-side prerendering</strong>. For faster initial loading and improved SEO, your Angular app is prerendered on the server. The resulting HTML is then transferred to the browser where a client-side copy of the app takes over.</li>
-    <li><strong>Webpack dev middleware</strong>. In development mode, there's no need to run the <code>webpack</code> build tool. Your client-side resources are dynamically built on demand. Updates are available as soon as you modify any file.</li>
-    <li><strong>Hot module replacement</strong>. In development mode, you don't even need to reload the page after making most changes. Within seconds of saving changes to files, your Angular app will be rebuilt and a new instance injected is into the page.</li>
-    <li><strong>Efficient production builds</strong>. In production mode, development-time features are disabled, and the <code>webpack</code> build tool produces minified static CSS and JavaScript files.</li>
-</ul>-->
-
-<div class="jumbotron background-image">
-    <h1 class="display-4">Hello, world!</h1>
-    <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-    <hr class="my-4">
-    <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-    <p class="lead">
-        <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-    </p>
+﻿<div class="background-image">
+    <div class="background-shadow">
+        <P class="title-text">Сервіс громадських петицій</P>
+        <p class="regular-text">Прийми участь у покращенні життя міста</p>
+        <button type="button" class="btn btn-primary"><span class="bold-text">+ Створити петицію</span></button>
+    </div>
+</div>
+<div class="container">
+    <h3>По категоріям</h3>
+    <div class="categories">
+        <div class="card" style="width: 18rem;">
+            <img class="card-img-top" src="../../../assets/transport.jpg" alt="Transport" />
+            <div class="card-body">
+                <h4 class="card-text">Транспорт та дороги</h4>
+                <button type="button" class="btn btn-light">
+                    петицій <span class="badge badge-primary">9</span>
+                </button>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img class="card-img-top" src="../../../assets/health.jpg" alt="Medicine" />
+            <div class="card-body">
+                <h4 class="card-text">Охорона здоров'я</h4>
+                <button type="button" class="btn btn-light">
+                    петицій <span class="badge badge-primary">11</span>
+                </button>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img class="card-img-top" src="../../../assets/industry.jpg" alt="Industry" />
+            <div class="card-body">
+                <h4 class="card-text">Промисловість</h4>
+                <button type="button" class="btn btn-light">
+                    петицій <span class="badge badge-primary">2</span>
+                </button>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img class="card-img-top" src="../../../assets/study.jpg" alt="Study" />
+            <div class="card-body">
+                <h4 class="card-text">Освіта</h4>
+                <button type="button" class="btn btn-light">
+                    петицій <span class="badge badge-primary">5</span>
+                </button>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img class="card-img-top" src="../../../assets/police.jpg" alt="Study" />
+            <div class="card-body">
+                <h4 class="card-text">Правопорядок</h4>
+                <button type="button" class="btn btn-light">
+                    петицій <span class="badge badge-primary">3</span>
+                </button>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img class="card-img-top" src="../../../assets/economic.jpg" alt="Study" />
+            <div class="card-body">
+                <h4 class="card-text">Економіка та фінанси</h4>
+                <button type="button" class="btn btn-light">
+                    петицій <span class="badge badge-primary">3</span>
+                </button>
+            </div>
+        </div>
+    </div>
 </div>
