--- a/PetitionsClient/ClientApp/app/components/menu/menu.component.html
+++ b/PetitionsClient/ClientApp/app/components/menu/menu.component.html
@@ -1,7 +1,10 @@
-﻿<div class="row">
-    <div class="col-8">
+﻿<div class="row header">
+    <div class="col-8 centered">
         <h3>
-            <a class="nav-link" [routerLink]="['/home']">Громадські петиції</a>
+            <a class="nav-link mrg-top" [routerLink]="['/home']">
+                <img class="logo" src="../../../assets/petitions-logo.png" />
+                Громадські петиції
+            </a>
         </h3>
     </div>
     <div class="col-4 centered">
