--- a/PetitionsClient/ClientApp/app/components/app/app.component.css
+++ b/PetitionsClient/ClientApp/app/components/app/app.component.css
@@ -4,3 +4,9 @@
         padding-top: 50px;
     }
 }
+
+#footer {
+    padding: 20px;
+    text-align: center;
+    box-shadow: 0 -2px 2px -2px #333;
+}
