--- a/PetitionsClient/ClientApp/app/components/app/app.component.html
+++ b/PetitionsClient/ClientApp/app/components/app/app.component.html
@@ -1,8 +1,5 @@
-<div class='container-fluid'>
-    <div>
-        <app-menu></app-menu>
-    </div>
-    <div>
-        <router-outlet></router-outlet>
-    </div>
+﻿<div>
+    <app-menu></app-menu>
+    <router-outlet></router-outlet>
+    <div id="footer">&copy; Громадські петиції - Вінниця 2018</div>
 </div>
