--- a/PetitionsClient/ClientApp/app/components/app/app.component.html
+++ b/PetitionsClient/ClientApp/app/components/app/app.component.html
@@ -1,5 +1,5 @@
 ﻿<div>
     <app-menu></app-menu>
     <router-outlet></router-outlet>
-    <div id="footer">&copy; Громадські петиції - Вінниця 2018</div>
+    <div id="footer"><p>&copy; Громадські петиції - Вінниця 2018</p></div>
 </div>
