--- a/PetitionsClient/ClientApp/app/components/home/home.component.html
+++ b/PetitionsClient/ClientApp/app/components/home/home.component.html
@@ -2,7 +2,9 @@
     <div class="background-shadow">
         <P class="title-text">Сервіс громадських петицій</P>
         <p class="regular-text">Прийми участь у покращенні життя міста</p>
-        <button type="button" class="btn btn-primary"><span class="bold-text">+ Створити петицію</span></button>
+        <button type="button" class="btn btn-primary" [routerLink]="['/create-petition']">
+            <span class="bold-text">+ Створити петицію</span>
+        </button>
     </div>
 </div>
 <div class="container">
