--- a/PetitionsClient/ClientApp/app/components/new-petition/new-petition.component.html
+++ b/PetitionsClient/ClientApp/app/components/new-petition/new-petition.component.html
@@ -1,3 +1,3 @@
-<p>
-  new-petition works!
-</p>
+﻿<button type="button" class="btn btn-primary" *ngIf="!isAuthorized" [routerLink]="['/register-category']">
+            <span class="bold-text">Нова категорія</span>
+        </button>
