Regester petitions category view completed

--- a/PetitionsClient/ClientApp/app/components/app/app.component.html
+++ b/PetitionsClient/ClientApp/app/components/app/app.component.html
@@ -1,5 +1,7 @@
 ﻿<div>
     <app-menu></app-menu>
-    <router-outlet></router-outlet>
-    <div id="footer"><p>&copy; Громадські петиції - Вінниця 2018</p></div>
+    <div class="h-calc">
+        <router-outlet></router-outlet>
+    </div>
+    <div id="footer">&copy; Громадські петиції - Вінниця 2018</div>
 </div>
