--- a/PetitionsClient/ClientApp/app/components/app/app.component.css
+++ b/PetitionsClient/ClientApp/app/components/app/app.component.css
@@ -6,7 +6,13 @@
 }
 
 #footer {
-    padding: 20px;
+    padding: 16px;
+    font-size: 14px;
+    color: #808080;
     text-align: center;
-    box-shadow: 0 -2px 2px -2px #333;
+    box-shadow: 0 -1px 1px -1px #333;
+}
+
+.h-calc {
+    min-height: calc(100vh - 80px - 52.9px);
 }
