Petition category posted successfully

--- a/PetitionsClient/ClientApp/app/components/category/register-category/register-category.component.html
+++ b/PetitionsClient/ClientApp/app/components/category/register-category/register-category.component.html
@@ -7,7 +7,7 @@
             <div class="form-group">
                 <label for="name">Назва</label>
                 <input type="text"
-                       [(ngModel)]="name"
+                       [(ngModel)]="category.name"
                        class="form-control"
                        id="name"
                        name="name"
@@ -16,7 +16,7 @@
             <div class="form-group">
                 <label for="description">Опис</label>
                 <textarea type="text"
-                          [(ngModel)]="description"
+                          [(ngModel)]="category.description"
                           class="form-control"
                           id="description"
                           name="description"
