petition register view completed

--- a/PetitionsClient/ClientApp/app/components/category/register-category/register-category.component.css
+++ b/PetitionsClient/ClientApp/app/components/category/register-category/register-category.component.css
@@ -6,8 +6,6 @@
     margin: 0 auto;
 }
 
-.alert-right-bottom {
-    position: absolute;
-    bottom: 40px;
-    right: 20px;
+textarea {
+    height: 150px;
 }
