--- a/PetitionsClient/ClientApp/app/components/category/register-category/register-category.component.html
+++ b/PetitionsClient/ClientApp/app/components/category/register-category/register-category.component.html
@@ -11,7 +11,7 @@
                        class="form-control"
                        id="name"
                        name="name"
-                       placeholder='напр. "Транспорт"'>
+                       placeholder='напр. "Транспорт та дороги"'>
             </div>
             <div class="form-group">
                 <label for="description">Опис</label>
