--- a/PetitionsClient/ClientApp/app/components/menu/menu.component.html
+++ b/PetitionsClient/ClientApp/app/components/menu/menu.component.html
@@ -13,7 +13,7 @@
                 <a class="nav-link menu-btn" [routerLink]="['/home']">Головна</a>
             </li>
             <li class="nav-item" [routerLinkActive]="['link-active']">
-                <a class="nav-link menu-btn" [routerLink]="['/counter']">Всі петиції</a>
+                <a class="nav-link menu-btn" [routerLink]="['/petitions']">Всі петиції</a>
             </li>
             <li class="nav-item" [routerLinkActive]="['link-active']">
                 <a class="nav-link menu-btn" *ngIf="!isAuthorized" (click)="login()" [routerLink]="['/login']">Вхід</a>
