--- a/PetitionsClient/ClientApp/app/components/petition/register-petition/register-petition.component.css
+++ b/PetitionsClient/ClientApp/app/components/petition/register-petition/register-petition.component.css
@@ -16,6 +16,11 @@
     height: 282px;
 }
 
+.btn.btn-default.dropdown-toggle {
+    background: white;
+    border-color: lightgray;
+}
+
 .dropdown-item {
     cursor: pointer;
 }
