--- a/PetitionsClient/ClientApp/app/components/petition/all-petitions/all-petitions.component.css
+++ b/PetitionsClient/ClientApp/app/components/petition/all-petitions/all-petitions.component.css
@@ -11,7 +11,7 @@
     color: #333;
     background-color: #fff;
     border-radius: 3px;
-    border: none;
+    /*border: none;*/
     outline: none !important;
     margin-left: 10px;
 }
@@ -133,6 +133,10 @@ table.table-striped tbody tr:nth-of-type(odd) {
     background-color: #fcfcfc;
 }
 
+table.table-striped.table-hover thead {
+    color: dimgrey;
+}
+
 table.table-striped.table-hover tbody tr:hover {
     background: #f5f5f5;
 }
@@ -155,18 +159,29 @@ table.table td a:hover {
 }
 
 table.table td a.view {
-    width: 30px;
-    height: 30px;
+    /*width: 30px;
+    height: 30px;*/
     color: #2196F3;
-    border: 2px solid;
-    border-radius: 30px;
+    /*border: 2px solid;
+    border-radius: 30px;*/
     text-align: center;
 }
 
-table.table td a.view i {
+.font-size-sm {
+    font-size: 14px;
+}
+
+fa-icon {
+    font-size: 24px;
+}
+
+/*.svg-inline--fa.fa-arrow-alt-circle-right.fa-w-16 {
+    font-size: 48px;
+}*/
+/*table.table td a.view i {
     font-size: 22px;
     margin: 2px 0 0 1px;
-}
+}*/
 
 table.table .avatar {
     border-radius: 50%;
@@ -241,4 +256,13 @@ table.table .avatar {
     float: left;
     margin-top: 10px;
     font-size: 13px;
+}
+
+.btn.btn-default.dropdown-toggle {
+    background: white;
+    border-color: lightgray !important;
+}
+
+.dropdown-item {
+    cursor: pointer;
 }
