--- a/PetitionsClient/ClientApp/app/components/petition/all-petitions/all-petitions.component.html
+++ b/PetitionsClient/ClientApp/app/components/petition/all-petitions/all-petitions.component.html
@@ -4,8 +4,8 @@
         <div class="table-filter">
             <div class="row">
                 <div class="col-sm-3">
-                    <div class="show-entries">
-                        <span>Показати</span>
+                    <div class="show-entries row align-items-end">
+                        <label>Показати</label>
                         <div class="btn-group" dropdown>
                             <button dropdownToggle type="button" class="btn btn-default dropdown-toggle" name="selectItemsPerPage">
                                 {{itemsPerPage}}
@@ -18,16 +18,20 @@
                                 </ul>
                             </div>
                         </div>
-                        <span>петицій</span>
+                        <label>петицій</label>
                     </div>
                 </div>
                 <div class="col-sm-9">                    
-                    <div class="filter-group">
+                    <div class="filter-group row align-items-end">
                         <label>Пошук</label>
                         <input type="text" class="form-control" [(ngModel)]="searchQuery">
-                        <a class="view" title="Пошук" data-toggle="tooltip" (click)="search()"><fa-icon [icon]="faSearch"></fa-icon></a>
+                        <label>
+                            <a class="view" title="Пошук" data-toggle="tooltip" (click)="search()">
+                                <fa-icon [icon]="faSearch" class="search-icon"></fa-icon>
+                            </a>
+                        </label>
                     </div>
-                    <div class="filter-group">
+                    <div class="filter-group  row align-items-end">
                         <label>Статус</label>
                         <div class="btn-group" dropdown>
                             <button dropdownToggle type="button" class="btn btn-default dropdown-toggle" name="status">
@@ -46,7 +50,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="filter-group">
+                    <div class="filter-group  row align-items-end">
                         <label>Категорія</label>
                         <div class="btn-group" dropdown>
                             <button dropdownToggle type="button" class="btn btn-default dropdown-toggle" name="category">
@@ -70,8 +74,7 @@
         </div>
         <table class="table table-striped table-hover">
             <thead>
-                <tr>
-                    <th>№</th>
+                <tr>                   
                     <th>Назва петиції</th>
                     <th>Категорія</th>
                     <th>Автор</th>
@@ -82,27 +85,31 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let petition of shownPetitions; index as i">
-                    <td>{{i+1}}</td>
+                <tr *ngFor="let petition of shownPetitions; index as i">                    
                     <td>{{petition.name}}</td>
                     <td>{{petition.category.name}}</td>
                     <td>{{petition.user.lastName}} {{petition.user.firstName[0]}}.{{petition.user.middleName[0]}}.</td>
                     <td><span class="font-size-sm">{{petition.created |  date:'yyyy-MM-dd'}}</span></td>
                     <td><span [ngStyle]="{'color':getColor(petition.status)}">&#11044;&nbsp;&nbsp;</span>{{getName(petition.status)}}</td>
                     <td><span class="font-size-sm">{{petition.voters.length}}/{{votesCount}}</span></td>
-                    <td><a href="#" class="view" title="View Details" data-toggle="tooltip"><fa-icon [icon]="faArrowAltCircleRight"></fa-icon></a></td>
+                    <td><a class="view" title="View Details" data-toggle="tooltip">
+                            <fa-icon class="arrow-icon" [icon]="faArrowAltCircleRight"></fa-icon>
+                        </a>
+                    </td>
                 </tr>                
             </tbody>
         </table>
         <div class="clearfix">
-            <div class="hint-text">Показано <b>{{showedItems}}</b> з <b>{{filteredPetitions.length}}</b> петицій</div>
-            <pagination *ngIf="filteredPetitions.length > itemsPerPage" 
-                        [(ngModel)]="currentPage"
-                        [totalItems]="filteredPetitions.length" 
-                        [maxSize]="5" 
-                        [itemsPerPage] ="itemsPerPage" 
-                        (pageChanged)="pageChanged($event)">
-            </pagination>
+            <div class="hint-text">Показано <b>{{shownPetitions.length}}</b> з <b>{{filteredPetitions.length}}</b> петицій</div>
+            <div class="pagination">
+                <pagination *ngIf="filteredPetitions.length > itemsPerPage"
+                            [(ngModel)]="currentPage"
+                            [totalItems]="filteredPetitions.length"
+                            [maxSize]="5"
+                            [itemsPerPage]="itemsPerPage"
+                            (pageChanged)="pageChanged($event)">
+                </pagination>
+            </div>
         </div>
     </div>
 </div> 
